fix: stretchPro.css 코드 오류 수정

--- a/src/assets/fonts/StretchPro/stretchPro.css
+++ b/src/assets/fonts/StretchPro/stretchPro.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'StretchPro';
-    src: url('StretchPro.otf') format('truetype'),
+    src: url('StretchPro.otf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
